--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
         <div class="for_ipad"></div>
     </div>
 
-    <footer>
+    <footer class="d_flex">
         <a href="javascript:;" class="product_intro"><i class="icon-product"></i><span>产品介绍</span></a>
-        <a href="javascript:;" class="apply_for_serv"><i class="icon-service"></i><span>申请服务</span></a>
+        <a href="./applyService.html" class="apply_for_serv"><i class="icon-service"></i><span>申请服务</span></a>
         <a href="./contactUs.html" class="contact_us"><i class="icon-contact"></i><span>联系我们</span></a>
     </footer>
 
