add the redpackDetails

--- a/redpackDetails.html
+++ b/redpackDetails.html
@@ -15,7 +15,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- 为移动设备添加 viewport -->
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1, user-scalable=no">
-    <title>订单状态</title>
+    <title>红包详情</title>
     <link rel="stylesheet" type="text/css" href="./css/man.min.css" />
     <script type="text/javascript" src="./js/response.js"></script>
 
@@ -25,31 +25,31 @@
 
     <header class="d_flex">
         <a class="icon-back" href="./index.html"></a>
-        <span class="title">订单状态</span>
+        <span class="title">红包详情</span>
     </header>
 
     <div id="order_state" class="d_flex">
         <div class="order_title d_flex">
-            <div>已使用服务数量：<span>800</span></div>
-             <div>剩余服务数量：<span>200</span></div> 
+            <div>已领取红包数量：<span>800</span></div>
+             <div>剩余红包数量：<span>200</span></div> 
         </div>
         <p class="sub_title d_flex">
-            <span>用户ID</span>
-            <span>线下配送</span>
-            <span class="final_one">领取红包金额</span>
+            <span>兑换码</span>
+            <span>领取金额</span>
+            <span class="final_one">红包状态</span>
         </p>
         <div class="order_details">
             <div class="info_form d_flex">
-                <p><span>小朋友</span><span>2017-08-01</span><span>1.2元</span></p>
-                <p><span>小朋友</span><span>2017-08-01</span><span>1.2元</span></p>
-                <p><span>小朋友</span><span>2017-08-01</span><span>1.2元</span></p>
-                <p><span>小朋友</span><span>2017-08-01</span><span>1.2元</span></p>
-                <p><span>小朋友</span><span>2017-08-01</span><span>1.2元</span></p>
-                <p><span>小朋友</span><span>2017-08-01</span><span>1.2元</span></p>
-                <p><span>小朋友</span><span>2017-08-01</span><span>1.2元</span></p>
-                <p><span>小朋友</span><span>2017-08-01</span><span>1.2元</span></p>
-                <p><span>小朋友</span><span>2017-08-01</span><span>1.2元</span></p>
-                <p><span>小朋友</span><span>2017-08-01</span><span>1.2元</span></p>
+                <p><span>ABCDEFG1230</span><span>￥6.66</span><span>已领取</span></p>
+                <p><span>ABCDEFG1231</span><span>￥6.66</span><span>已领取</span></p>
+                <p><span>ABCDEFG1232</span><span>￥6.66</span><span>已领取</span></p>
+                <p><span>ABCDEFG1233</span><span>￥6.66</span><span>已领取</span></p>
+                <p><span>ABCDEFG1234</span><span>￥6.66</span><span>已领取</span></p>
+                <p><span>ABCDEFG1235</span><span>￥6.66</span><span>已领取</span></p>
+                <p><span>ABCDEFG1236</span><span>￥6.66</span><span>未领取</span></p>
+                <p><span>ABCDEFG1237</span><span>￥6.66</span><span>未领取</span></p>
+                <p><span>ABCDEFG1238</span><span>￥6.66</span><span>未领取</span></p>
+                <p><span>ABCDEFG1239</span><span>￥6.66</span><span>未领取</span></p>
             </div>
             <div class="page_num d_flex">
                 <a href="javascript:;"><span class="prev">上一页</span></a>
