--- a/contactUs.html
+++ b/contactUs.html
@@ -44,7 +44,7 @@
             <p class="num">020-82145798</p>
             <p class="black_c">拨打客服电话，快速解决问题</p>
         </div>
-        <div>
+        <div class="qrcode">
             <img src="./images/qrcode.png" alt=""><br><br>
             <span class="black_c">关注我们，获取更多贴心服务</span>
         </div>
