--- a/applyService.html
+++ b/applyService.html
@@ -35,7 +35,7 @@
                 <span>场景选择</span>
             </p>
             <div class="s_card d_flex">
-                <div class="card active"><i class="icon-service4"></i><span>测试电子卡片</span></div>
+                <div class="card active"><i class="icon-service4"></i><span>线上电子卡片</span></div>
                 <div class="card"><i class="icon-service5"></i><span>线下印刷卡片</span></div>
             </div>
         </div>
