--- a/orderSuccess(online)(新).html
+++ b/orderSuccess(online)(新).html
@@ -51,12 +51,12 @@
                 </a>
                 <div class="copy_link">
                     <p>微砍价萌动一夏活动微砍价萌动一夏活动微砍价萌动一夏活动微砍价萌动一夏活动微砍价萌动一夏活动微砍价萌动一夏活动</p>
-                    <p>http://www.1234567890.comhttp://www.1234567890.comhttp://www.1234567890.comhttp://www.1234567890.comhttp://www.1234567890.comhttp://www.1234567890.com</p>
-                    <p><a class="next_step" href="javascript:;">复制链接</a></p>
+                    <p>这是一个互动简介这是一个互动简介这是一个互动简介这是一个互动简介这是一个互动简介这是一个互动简介这是一个互动简介这是一个互动简介这是一个互动简介这是一个互动简介这是一个互动简介</p>
                 </div>
             </div>
             <p class="aux_msg"><span class="aux_circle"></span><span>或点击左侧二维码保存到手机即可</span></p>
         </div>
+        <a class="next_step" href="javascript:;">复制链接</a>
         <div class="for_ipad"></div>
     </div>
 </body>
