--- a/redpackDetails.html
+++ b/redpackDetails.html
@@ -29,27 +29,28 @@
     </header>
 
     <div id="order_state" class="d_flex">
-        <div class="order_title d_flex">
+        <div class="order_title order_title2 d_flex">
             <div>已领取红包数量：<span>800</span></div>
              <div>剩余红包数量：<span>200</span></div> 
         </div>
-        <p class="sub_title d_flex">
+        <p class="sub_title sub_title2 d_flex">
             <span>兑换码</span>
             <span>领取金额</span>
-            <span class="final_one">红包状态</span>
+            <span>红包状态</span>
+            <span class="final_one">领取人</span>
         </p>
         <div class="order_details">
-            <div class="info_form d_flex">
-                <p><span>ABCDEFG1230</span><span>￥6.66</span><span>已领取</span></p>
-                <p><span>ABCDEFG1231</span><span>￥6.66</span><span>已领取</span></p>
-                <p><span>ABCDEFG1232</span><span>￥6.66</span><span>已领取</span></p>
-                <p><span>ABCDEFG1233</span><span>￥6.66</span><span>已领取</span></p>
-                <p><span>ABCDEFG1234</span><span>￥6.66</span><span>已领取</span></p>
-                <p><span>ABCDEFG1235</span><span>￥6.66</span><span>已领取</span></p>
-                <p><span>ABCDEFG1236</span><span>￥6.66</span><span>未领取</span></p>
-                <p><span>ABCDEFG1237</span><span>￥6.66</span><span>未领取</span></p>
-                <p><span>ABCDEFG1238</span><span>￥6.66</span><span>未领取</span></p>
-                <p><span>ABCDEFG1239</span><span>￥6.66</span><span>未领取</span></p>
+            <div class="info_form info_form2 d_flex">
+                <p><span>ABCDEFG1230</span><span>￥6.66</span><span>已领取</span><span>一个人两个人三个人</span></p>
+                <p><span>ABCDEFG1231</span><span>￥6.66</span><span>已领取</span><span>一个人</span></p>
+                <p><span>ABCDEFG1232</span><span>￥6.66</span><span>已领取</span><span>一个人</span></p>
+                <p><span>ABCDEFG1233</span><span>￥6.66</span><span>已领取</span><span>一个人</span></p>
+                <p><span>ABCDEFG1234</span><span>￥6.66</span><span>已领取</span><span>一个人</span></p>
+                <p><span>ABCDEFG1235</span><span>￥6.66</span><span>已领取</span><span>一个人</span></p>
+                <p><span>ABCDEFG1236</span><span>￥6.66</span><span>未领取</span><span>一个人</span></p>
+                <p><span>ABCDEFG1237</span><span>￥6.66</span><span>未领取</span><span>一个人</span></p>
+                <p><span>ABCDEFG1238</span><span>￥6.66</span><span>未领取</span><span>一个人</span></p>
+                <p><span>ABCDEFG1239</span><span>￥6.66</span><span>未领取</span><span>一个人</span></p>
             </div>
             <div class="page_num d_flex">
                 <a href="javascript:;"><span class="prev">上一页</span></a>
