--- a/index2.html
+++ b/index2.html
@@ -25,16 +25,11 @@
 <!------分------割------线------>
 <body>
 
-    <header class="d_flex">
-        <a class="icon-back" href="./index_new.html"></a>
-        <span class="title">申请服务</span>
-    </header>
-
     <div id="content">
         <div class="link d_flex">
             <img src="./images/qccodeImage.png" alt="qccode">
             <p>申请服务请前往PC端</p>
-            <a href="http://www.majl.cn">http://www.majl.cn</a>
+            <a href="javascript:alert('请在PC端输入网址访问！');">http://www.majl.cn</a>
             <span class="dash"></span>
             <p>商务合作请联系</p>
             <a href="tel:4009209898">400-920-9898</a>
