fix merge problem

--- a/旧版/offlineService.html
+++ b/旧版/offlineService.html
@@ -35,8 +35,8 @@
                 <span>模板选择</span>
             </p>
             <div class="template_list d_flex">
-                <span class="list d_flex" style="width: 53%"><img src="./images/offline_service_template1.png" alt=""><i class="icon-offline4"></i></span>
-                <span class="list d_flex" style="width: 37%"><img src="./images/offline_service_template2.png" alt=""><i class="icon-offline5"></i></span>
+                <span class="list d_flex"><img src="./images/offline_service_template1.png" alt=""><i class="icon-offline4"></i></span>
+                <span class="list d_flex"><img src="./images/offline_service_template2.png" alt=""><i class="icon-offline5"></i></span>
             </div>
         </div>
         <div class="info">
